2001-09-28  Bart Schaefer  <schaefer@zsh.org>

	* 15889: Test/V01zmodload.ztst: Compute module dependencies for
	external modules so that they can be unloaded in the right order.

2001-09-27  Oliver Kiddle  <opk@zsh.org>

	* 15882: zshconfig.ac, Etc/MACHINES, Test/C02cond.ztst: fix
	build and test problems on MacOS X (Darwin).

2001-09-27  Clint Adams  <clint@zsh.org>

	* 15886: Src/Modules/tcp.c: use select if poll
	is not available, or complain if neither are
	available.

2001-09-27  Peter Stephenson  <pws@csr.com>

	* Config/version.mk, Completion/Unix/Command/.distfiles,
	Doc/Zsh/.distfiles, Functions/Misc/.distfiles,
	Functions/Zle/.distfiles, Test/.distfiles: version 4.1.0-dev-2,
	with the usual fix for the list of distributed files.

2001-09-25  Bart Schaefer  <schaefer@zsh.org>

	* 15871, 15872: Src/subst.c, Test/D04parameter.ztst: Equivalence
	of `...` and $(...) in parameter substitutions, e.g. ${(e)...}.

2001-09-25  Sven Wischnowsky  <wischnow@zsh.org>

	* 15868, 15869: Src/text.c: job text building code couldn't handle
	empty sublists (as in `coproc || test')

2001-09-25  Clint Adams  <clint@zsh.org>

	* 15866: Completion/Unix/Command/_ssh:
	complete v2 ciphers after -o Ciphers=,
	complete protocol numbers after -o Protocol.

2001-09-24  Bart Schaefer  <schaefer@zsh.org>

	* 15865: Doc/Zsh/builtins.yo: Fix ancient `print -z' doc bug
	(see zsh-workers/214 (yes, really, 214)).

	* 15864: Doc/Zsh/params.yo: Document that assignment to TERM
	is necessary to re-initialize the terminal.

	* users/4269: Src/hist.c: Detect and reject corrupted history
	files ('\0' bytes) rather than consuming all available memory.

2001-09-24  Peter Stephenson  <pws@csr.com>

	* Src/builtin.c, Src/exec.c: Unwind function calls before exiting
	shell from exit command to allow EXIT traps to run.

2001-09-21  Andrew Main (Zefram)  <zefram@zsh.org>

	* Doc/Zsh/contrib.yo, Functions/Misc/tetris: Tetris game for ZLE.

2001-09-20  Bart Schaefer  <schaefer@zsh.org>
